syntax="proto3";

package order;

option go_package = "sut-order-go/proto/order";

message GetProductsToOrderRequest {
    string keyword = 1;
}

message GetProductsToOrderResponse {
    int64 status = 1;
    string error = 2;
    string data = 3;
}

message GetDetailProductsRequest {
    string url = 1;
}

message DetailProduct {
    string name = 1;
    string description = 2;
    string image = 3;
    string url = 4;
}

message GetDetailProductsResponse {
    int64 status = 1;
    string error = 2;
    DetailProduct detailproduct = 3;
}

message CreateOrderRequest {
    string adminId = 1;
    string fullname = 2;
    string username = 3; 
    string userId = 4;
    string url = 5;
    string productName = 6;
}

message CreateOrderResponse {
    int64 status = 1;
    string error = 2;
}

message CreateOrderBulkRequest {
    string adminId = 1;
    string fullname = 2;
    string username = 3; 
    string userId = 4;
}

message CreateOrderBulkResponse {
    int64 status = 1;
    string error = 2;
}

