syntax="proto3";

package order;

option go_package = "sut-order-go/proto/order";

import "order/order.proto";

service OrderService {
    rpc GetProductsToOrderByKeyword(GetProductsToOrderRequest) returns (GetProductsToOrderResponse) {}
    rpc GetDetailProducts(GetDetailProductsRequest) returns (GetDetailProductsResponse) {}
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
}

